updated my portfolio

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/allien.JPG" />
+    <link rel="icon" type="image/jpeg" href="/allien.JPG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#fafafa" />
+    <meta name="description" content="Collins Adi — Full Stack Blockchain Engineer. Built Reeng, the first wearable stablecoin wallet." />
     <title>Collins Adi</title>
   </head>
   <body>
